RESOLVED FIXED162399
Media controls playhead does not animate smoothly while playing
https://bugs.webkit.org/show_bug.cgi?id=162399
Summary Media controls playhead does not animate smoothly while playing
Wenson Hsieh
Reported 2016-09-22 09:16:33 PDT
Media controls playhead does not animate smoothly while playing
Attachments
Patch (22.57 KB, patch)
2016-09-22 10:53 PDT, Wenson Hsieh
no flags
Build fix for WebVideoFullscreenControllerAVKit clients (23.55 KB, patch)
2016-09-22 11:25 PDT, Wenson Hsieh
no flags
Patch (23.56 KB, patch)
2016-09-22 20:20 PDT, Wenson Hsieh
no flags
Actually fix the iOS build. (23.56 KB, patch)
2016-09-22 23:53 PDT, Wenson Hsieh
no flags
Set the timing value to have 0 playback rate when scrubbing begins (24.57 KB, patch)
2016-09-23 13:32 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2016-09-22 09:16:58 PDT
Wenson Hsieh
Comment 2 2016-09-22 10:53:41 PDT
Wenson Hsieh
Comment 3 2016-09-22 11:25:57 PDT
Created attachment 289581 [details] Build fix for WebVideoFullscreenControllerAVKit clients
Wenson Hsieh
Comment 4 2016-09-22 20:20:11 PDT
Wenson Hsieh
Comment 5 2016-09-22 23:53:56 PDT
Created attachment 289667 [details] Actually fix the iOS build.
Wenson Hsieh
Comment 6 2016-09-23 13:32:30 PDT
Created attachment 289701 [details] Set the timing value to have 0 playback rate when scrubbing begins
WebKit Commit Bot
Comment 7 2016-09-23 18:41:09 PDT
Comment on attachment 289701 [details] Set the timing value to have 0 playback rate when scrubbing begins Clearing flags on attachment: 289701 Committed r206350: <http://trac.webkit.org/changeset/206350>
WebKit Commit Bot
Comment 8 2016-09-23 18:41:13 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.